# pandas_fuzzy

./: .gitignore  Cargo.toml  README.md  pyproject.toml  run.py
src/: lib.rs
src/pandas_fuzzy/: __init__.py  _fuzzy.pyi  api.py
