[package]
name = "pandas_fuzzy"
version = "0.1.0"
edition = "2024"

[lib]
name = "_fuzzy"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
numpy = "0.29.0"
rapidfuzz = "0.5.0"
pyo3-arrow = { version = "0.19.0", default-features = false }
arrow-array = "59"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py39"] }
