[project]
name = "pandas-fuzzy"
version = "0.1.0"
description = "Fast fuzzy string matching for pandas, powered by Rust and Apache Arrow"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Anant Mishra" }]
keywords = [
    "pandas",
    "fuzzy",
    "rust",
    "arrow",
    "string-matching",
    "levenshtein",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["pandas>=2.3.3", "pyarrow>=21.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/pandas_fuzzy"
Repository = "https://github.com/yourusername/pandas_fuzzy"
Issues = "https://github.com/yourusername/pandas_fuzzy/issues"

[tool.maturin]
module-name = "pandas_fuzzy._fuzzy"
python-packages = ["pandas_fuzzy"]
python-source = "src"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
